deimos/glfw/glfw3.d


enum GLFW_PRESENT          =    0x00050001;
enum GLFW_AXES             =    0x00050002;
enum GLFW_BUTTONS          =    0x00050003;

enum GLFW_NO_ERROR           =  0;
enum GLFW_NOT_INITIALIZED    =  0x00070001;
enum GLFW_NO_CURRENT_CONTEXT =  0x00070002;
enum GLFW_INVALID_ENUM       =  0x00070003;
enum GLFW_INVALID_VALUE      =  0x00070004;
enum GLFW_OUT_OF_MEMORY      =  0x00070005;
enum GLFW_API_UNAVAILABLE    =  0x00070006;
enum GLFW_VERSION_UNAVAILABLE=  0x00070007;
enum GLFW_PLATFORM_ERROR     =  0x00070008;
enum GLFW_FORMAT_UNAVAILABLE =  0x00070009;
enum GLFW_GAMMA_RAMP_SIZE    =  256;

enum GLFW_MONITOR_WIDTH_MM    =     0x00060001;
enum GLFW_MONITOR_HEIGHT_MM   =     0x00060002;
enum GLFW_MONITOR_POS_X       =     0x00060003;
enum GLFW_MONITOR_POS_Y       =     0x00060004;

enum GLFW_CONNECTED           =     0x00061000;
enum GLFW_DISCONNECTED        =     0x00061001;


/*************************************************************************
 * Typedefs
 *************************************************************************/

extern (C) {
    /* OpenGL function pointer type */
    alias void function() GLFWglproc;

    /* Window handle type */
    alias void* GLFWwindow;
    alias void* GLFWmonitor;

    /* Function pointer types */
    alias void function(int,const(char)*) GLFWerrorfun;
    alias void function(GLFWwindow,int,int) GLFWwindowposfun;
    alias void function(GLFWwindow,int,int) GLFWwindowsizefun;
    alias int  function(GLFWwindow) GLFWwindowclosefun;
    alias void function(GLFWwindow) GLFWwindowrefreshfun;
    alias void function(GLFWwindow,int) GLFWwindowfocusfun;
    alias void function(GLFWwindow,int) GLFWwindowiconifyfun;
    alias void function(GLFWwindow,int,int) GLFWmousebuttonfun;
    alias void function(GLFWwindow,int,int) GLFWcursorposfun;
    alias void function(GLFWwindow,int) GLFWcursorenterfun;
    alias void function(GLFWwindow,double,double) GLFWscrollfun;
    alias void function(GLFWwindow,int,int) GLFWkeyfun;
    alias void function(GLFWwindow,int) GLFWcharfun;
    alias void function(GLFWmonitor,int) GLFWmonitorfun;

    /* The video mode structure used by glfwGetVideoModes */
    struct GLFWvidmode
    {
        int width;
        int height;
        int redBits;
        int blueBits;
        int greenBits;
    }

    /* Gamma ramp */
    struct GLFWgammaramp
    {
        ushort[GLFW_GAMMA_RAMP_SIZE] red;
        ushort[GLFW_GAMMA_RAMP_SIZE] green;
        ushort[GLFW_GAMMA_RAMP_SIZE] blue;
    }


    /*************************************************************************
    * Prototypes
    *************************************************************************/

    /* Initialization, termination and version querying */
    int  glfwInit();
    void glfwTerminate();
    void glfwGetVersion(int* major, int* minor, int* rev);
    const(char)* glfwGetVersionString();

    void glfwSetErrorCallback(GLFWerrorfun cbfun);

    const(GLFWmonitor)* glfwGetMonitors(int* count);
    GLFWmonitor glfwGetPrimaryMonitor();
    int glfwGetMonitorParam(GLFWmonitor monitor, int param);
    const(char)* glfwGetMonitorName(GLFWmonitor monitor);

    void glfwSetMonitorCallback(GLFWmonitorfun cbfun);
    const(GLFWvidmode)* glfwGetVideoModes(GLFWmonitor monitor, int* count);
    void glfwGetVideoMode(GLFWmonitor monitor, GLFWvidmode* mode);

    /* Gamma ramp functions */
    void glfwSetGamma(float gamma);
    void glfwGetGammaRamp(GLFWgammaramp* ramp);
    void glfwSetGammaRamp(const(GLFWgammaramp)* ramp);

    /* Window handling */
    void glfwDefaultWindowHints();
    void glfwWindowHint(int target, int hint);
    GLFWwindow glfwCreateWindow(int width, int height, const(char)* title, GLFWmonitor monitor, GLFWwindow share);
    void glfwDestroyWindow(GLFWwindow window);
    void glfwSetWindowTitle(GLFWwindow window, const(char)* title);
    void glfwGetWindowSize(GLFWwindow window, int* width, int* height);
    void glfwSetWindowSize(GLFWwindow window, int width, int height);
    void glfwGetWindowPos(GLFWwindow window, int* xpos, int* ypos);
    void glfwSetWindowPos(GLFWwindow window, int xpos, int ypos);
    void glfwIconifyWindow(GLFWwindow window);
    void glfwRestoreWindow(GLFWwindow window);
    void glfwShowWindow(GLFWwindow window);
    void glfwHideWindow(GLFWwindow window);
    GLFWmonitor glfwGetWindowMonitor(GLFWwindow window);
    int  glfwGetWindowParam(GLFWwindow window, int param);
    void glfwSetWindowUserPointer(GLFWwindow window, void* pointer);
    void* glfwGetWindowUserPointer(GLFWwindow window);
    void glfwSetWindowPosCallback(GLFWwindow window, GLFWwindowposfun cbfun);
    void glfwSetWindowSizeCallback(GLFWwindow window, GLFWwindowsizefun cbfun);
    void glfwSetWindowCloseCallback(GLFWwindow window, GLFWwindowclosefun cbfun);
    void glfwSetWindowRefreshCallback(GLFWwindow window, GLFWwindowrefreshfun cbfun);
    void glfwSetWindowFocusCallback(GLFWwindow window, GLFWwindowfocusfun cbfun);
    void glfwSetWindowIconifyCallback(GLFWwindow window, iconifyfun cbfun);

    /* Event handling */
    void glfwPollEvents();
    void glfwWaitEvents();

    /* Input handling */
    int  glfwGetInputMode(GLFWwindow window, int mode);
    void glfwSetInputMode(GLFWwindow window, int mode, int value);
    int  glfwGetKey(GLFWwindow window, int key);
    int  glfwGetMouseButton(GLFWwindow window, int button);
    void glfwGetCursorPos(GLFWwindow window, int* xpos, int* ypos);
    void glfwSetCursorPos(GLFWwindow window, int xpos, int ypos);
    void glfwGetScrollOffset(GLFWwindow window, double* xoffset, double* yoffset);
    void glfwSetKeyCallback(GLFWwindow window, GLFWkeyfun cbfun);
    void glfwSetCharCallback(GLFWwindow window, GLFWcharfun cbfun);
    void glfwSetMouseButtonCallback(GLFWwindow window, GLFWmousebuttonfun cbfun);
    void glfwSetCursorPosCallback(GLFWwindow window, GLFWcursorposfun cbfun);
    void glfwSetCursorEnterCallback(GLFWwindow window, GLFWcursorenterfun cbfun);
    void glfwSetScrollCallback(GLFWwindow window, GLFWscrollfun cbfun);

    /* Joystick input */
    int glfwGetJoystickParam(int joy, int param);
    int glfwGetJoystickAxes(int joy, float* axes, int numaxes);
    int glfwGetJoystickButtons(int joy, ubyte* buttons, int numbuttons);

    /* Clipboard */
    void glfwSetClipboardString(GLFWwindow window, const(char)* string);
    const(char)* glfwGetClipboardString(GLFWwindow window);

    /* Time */
    double glfwGetTime();
    void   glfwSetTime(double time);

    /* OpenGL support */
    void glfwMakeContextCurrent(GLFWwindow window);
    GLFWwindow glfwGetCurrentContext();
    void  glfwSwapBuffers(GLFWwindow window);
    void  glfwSwapInterval(int interval);
    int   glfwExtensionSupported(const(char)* extension);
    GLFWglproc glfwGetProcAddress(const(char)* procname);
}
